# audiolens

./: .gitignore  README.md  pyproject.toml
anchors/: multilingual.yaml
eval/: ravdess_gemma-4-E2B-it.jsonl
manifests/: README.md  librispeech_audio_fit_128.jsonl
plans/: 20260711-132354-audio-fixed-band-readout.md  20260711-generic-audio-lens.md  20260711-openai-tts-stimulus-amendment.md
scripts/: analyze_audio_eval.py  anchor_report.py  audio_readout.py  modal_audio_eval.py  modal_audio_workspace_eval.py  modal_fit_audio_lens.py  modal_fit_lens.py  modal_fit_mixed_lens.py  modal_push_fit_corpus.py  modal_workspace_eval.py  sanity_check.py  synthesize_audio_stimuli.py
src/audiolens/: __init__.py  audio_eval_model.py  audio_fitting.py  audio_workspace_eval.py  fitting.py  hub.py  models.py
src/audiolens/data/: multilingual.yaml
src/audiolens/models/: __init__.py  base.py  gemma4.py
tests/: test_analyze_audio_eval.py  test_anchors.py  test_audio_eval_model.py  test_audio_fitting.py  test_audio_workspace_eval.py  test_fitting.py  test_hub.py  test_modal_fit_audio_lens.py  test_model_orchestration.py  test_models.py  test_workspace_eval.py
