[project]
name = "audiolens"
version = "0.1.0"
description = "J-lens for audio-input LLMs: fit on text (Modal), read out over audio positions. First target: Gemma 4 E2B-it."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jlens",
    "torch>=2.6",
    "transformers>=5.5",
    "huggingface-hub>=0.26",
    "modal>=1.4",
    "librosa>=0.11.0",
    "pyyaml>=6",
    "pillow>=12.3.0",
    "torchvision>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.uv.sources]
jlens = { git = "https://github.com/anthropics/jacobian-lens", rev = "581d398613e5602a5af361e1c34d3a92ea82ba8e" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiolens"]

[tool.ruff]
line-length = 100
target-version = "py312"
