[project]
name = "audiolens"
version = "0.1.0"
description = "J-lens for audio-input LLMs: fit on text (Modal), read out over audio positions. First target: Gemma 4 E2B-it."
readme = "README.md"
license = "MIT"
authors = [{ name = "Eric W. Tramel" }]
keywords = ["audio", "interpretability", "jacobian-lens", "multimodal", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "jlens",
    "torch>=2.6",
    "transformers>=5.5",
    "huggingface-hub>=0.26",
    "modal>=1.4",
    "librosa>=0.11.0",
    "pyyaml>=6",
    "pillow>=12.3.0",
    "torchvision>=0.28.0",
]

[project.urls]
Repository = "https://github.com/eric-tramel/audiolens"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]
fit = [
    "accelerate==1.14.0",
    "datasets==5.0.0",
    "huggingface-hub==1.22.0",
    "soundfile==0.14.0",
    "torch==2.13.0",
    "transformers==5.13.0",
]

[tool.uv.sources]
jlens = { git = "https://github.com/anthropics/jacobian-lens", rev = "581d398613e5602a5af361e1c34d3a92ea82ba8e" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiolens"]

[tool.hatch.build.targets.wheel.force-include]
"src/audiolens/data/multilingual.yaml" = "audiolens/data/multilingual.yaml"

[tool.ruff]
line-length = 100
target-version = "py312"
